tests/NormalTests/paczka1/small_fuzzy/89698523.err
Error in line 2: CiNURl S559 14,9
Error in line 1: S293 S293 27,8
Error in line 4: S293 S317 35,3
Error in line 6: oEbGuGp S317 100,0
Error in line 3: CiNURl A743 31,6
Error in line 9: oEbGuGp A743 77,6
Error in line 15: oEbGuGp S317 57,3
